--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -29,17 +29,22 @@ ul, li{
     padding: 0;
 }
 body{
-    height: 100%;
+    height: 100% !important;
     background-color: $bg;
     font-family: 'Jura', sans-serif;
     font-size: 16px;
     font-weight: 400;
+    position: relative;
     overflow-x: hidden;
+    & *{
+        outline: none;
+    }
 }
 .wrapper{
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    overflow-x: hidden;
 }
 .content{
     flex: 1 0 auto;
@@ -48,9 +53,9 @@ body{
     flex: 0 0 auto;
 }
 .container{
-    max-width: 1220px;
+    max-width: 1230px;
     margin: 0 auto;
-    padding: 0 10px;
+    padding: 0 15px;
 }
 .section{
     padding-top: 60px;
@@ -64,12 +69,20 @@ body{
     }
     a{
         border: 2px solid $element;
+        background-color: $bg;
         border-radius: 50%;
         height: 45px;
         width: 45px;
         display: flex;
         justify-content: center;
         align-items: center;
+        transition: all .3s;
+        &:hover{
+            transform: scale(1.2);
+        }
+        &:focus{
+            transform: scale(1.2);
+        }
     }
 }
 .title{
@@ -78,12 +91,14 @@ body{
     font-size: 90px;
     z-index: 2;
     position: relative;
+    animation-duration: 3s;
 }
 .subtitle{
     font-family: 'Pobeda', sans-serif;
     font-size: 77px;
     z-index: 2;
     position: relative;
+    animation-duration: 3s;
 }
 
 .descr{
@@ -92,4 +107,116 @@ body{
 }
 .descr-row{
     margin: 20px 0;
+}
+.animated-modal__form{
+    border-radius: 10px;
+    background-image: url(../images/texture.jpg);
+    max-width: 1200px;
+    .contacts__form{
+        box-shadow: none;
+        padding: 0;
+    }
+}
+#animatedModalPrivate,
+#animatedModalOffer{
+    height: 60vh;
+}
+.cursiv{
+    font-style: italic;
+}
+.animated-modal{
+    border-radius: 0 0 10px 10px;
+    background-image: url(../images/texture.jpg);
+    padding: 20px;
+    &__title{
+        margin-bottom: 30px;
+        span{
+            display: block;
+            color: #000;
+        }
+    }
+    &__descr{
+        margin-bottom: 30px;
+    }
+    &__subtitle{
+        text-align: center;
+        line-height: 77px;
+        padding-top: 60px;
+    }
+    &__row{
+        padding-left: 30px;
+        position: relative;
+        &::after{
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 10px;
+            height: 10px;
+            width: 10px;
+            border-radius: 50%;
+            background-color: $element;
+        }
+    }
+    &__price{
+        text-align: right;
+        font-size: 24px;
+        margin-bottom: 30px;
+        span{
+            margin-left: 30px;
+        }
+    }
+    &__btn{
+        margin-top: 20px;
+        text-transform: uppercase;
+        font-size: 16px;
+        font-weight: 400;
+        border: 1px solid $element;
+        border-radius: 30px;
+        padding: 3px 15px;
+        transition: all .3s;
+        cursor: pointer;
+        display: inline-block;
+        &:hover{
+            background-color: $element;
+            color: #fff;
+        }
+        &:focus{
+            background-color: $element;
+            color: #fff;
+        }
+    }
+    .fancybox-content{
+        overflow: hidden;
+    }
+}
+.private__subtitle,
+.private__title{
+    font-family: 'Pobeda', sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.private__title{
+    span{
+        color: $element;
+        margin-right: 5px;
+    }
+}
+.private__descr{
+    margin-bottom: 20px;
+}
+.private__row{
+    padding-left: 30px;
+    position: relative;
+    margin-left: 15px;
+    &::before{
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 12px;
+        height: 10px;
+        width: 10px;
+        border-radius: 50%;
+        background-color: $element;
+    }
 }
