--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,15 +4,18 @@
 
 .header{
     font-family: 'Pobeda', sans-serif;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 700;
     text-transform: uppercase;
     box-shadow: 0px 8px 97.11px 19.89px rgba(39, 36, 86, 0.25);
     position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     z-index: 10;
     width: 100%;
     background-image: url(../images/texture.jpg);
-    opacity: .9;
+    opacity: .95;
     &__inner{
         height: 60px;
         display: flex;
@@ -21,29 +24,40 @@
     }
     &__menu{
         margin-left: auto;
-        a{
-            border-bottom: 1px solid transparent;
-            transition: all .3s;
-            &:hover{
-                color: $element;
-                border-bottom: 1px solid $element;
-            }
+    }
+    &__link, .header__link-main{
+        border-bottom: 1px solid transparent;
+        transition: all .3s;
+        &:hover{
+            color: $element;
+            border-bottom: 1px solid $element;
         }
+        &:focus{
+            color: $element;
+            border-bottom: 1px solid $element;
+        }
+    }
+    &__menu-btn{
+        display: none;
+        cursor: pointer;
     }
     &__btn{
         margin-left: auto;
-        a{
-            font-family: 'Jura', sans-serif;
-            font-size: 16px;
-            font-weight: 400;
-            border: 1px solid $element;
-            border-radius: 30px;
-            padding: 3px 15px;
-            transition: all .3s;
-            &:hover{
-                background-color: $element;
-                color: #fff;
-            }
+        margin-top: -3px;
+        font-family: 'Jura', sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+        border: 1px solid $element;
+        border-radius: 30px;
+        padding: 3px 15px;
+        transition: all .3s;
+        &:hover{
+            background-color: $element;
+            color: #fff;
+        }
+        &:focus{
+            background-color: $element;
+            color: #fff;
         }
     }
     &__list{
@@ -57,11 +71,12 @@
 }
 .top{
     position: relative;
-    height: 90vh;
+    &__text{
+        display: inline-block;
+        animation-name: fadeIn;
+    }
     &__inner{
         padding-top: 60px;
-        position: absolute;
-        z-index: 2;
     }
     &__subtitle{
         max-width: 580px;
@@ -80,6 +95,7 @@
         top: -180px;
         right: -180px;
         border-radius: 50%;
+        z-index: -1;
     }
     &__circle-img{
         position: absolute;
@@ -96,18 +112,28 @@
         bottom: 250px;
         left: -60px;
     }
+    &__img-box{
+        height: 230px;
+        position: relative;
+    }
     &__img{
         position: absolute;
         left: 0;
-        bottom: 0;
+        bottom: -50px;
+        z-index: -1;
     }
 }
 .about{
+    &__title{
+        width: 50%;
+        margin-left: auto;
+        padding-left: 30px;
+    }
     &__inner{
         display: flex;
     }
     &__photo{
-        min-width: 600px;
+        min-width: 50%;
         position: relative;
     }
     &__photo-img1{
@@ -138,8 +164,6 @@
     }
 }
 .aducation{
-    position: relative;
-    margin-bottom: 70px;
     &__wrapper{
         background-image: url(../images/texture.jpg);
         box-shadow: 0 100px 50px 10px #edf1f0;
@@ -151,70 +175,28 @@
         &::after{
             position: absolute;
             content: "";
-            height: 200vh;
-            width: 200%;
+            height: 400vh;
+            width: 400%;
             border-radius: 50%;
             background-image: url(../images/texture.jpg);
             background-position: -100px -60px;
             top: 0;
-            left: -50%;
+            left: -150%;
             z-index: -1;
         }
     }
-    &__inner{
+    &__subtitle{
+        text-align: center;
+    }
+    &__images{
         display: flex;
-    }
-    &__text{
-        margin-right: 30px;
-    }
-    &__photo{
-        min-width: 600px;
-        position: relative;
-        z-index: 2;
-    }
-    &__img-1{
-        width: 250px;
-        position: absolute;
-        top: 0;
-        left: 0;
-        box-shadow: 0px 8px 17.43px 3.57px rgba(39, 36, 86, 0.25);
-        border-radius: 10px;
-    }
-    &__img-2{
-        position: absolute;
-        top: 50px;
-        right: 0;
-        z-index: 1;
-        box-shadow: 0px 8px 17.43px 3.57px rgba(39, 36, 86, 0.25);
-        border-radius: 10px;
-    }
-    &__img-3{
-        position: absolute;
-        top: 180px;
-        box-shadow: 0px 8px 17.43px 3.57px rgba(39, 36, 86, 0.25);
-        border-radius: 10px;
-    }
-    &__img-4{
-        position: absolute;
-        right: 30px;
-        bottom: 80px;
-        box-shadow: 0px 8px 17.43px 3.57px rgba(39, 36, 86, 0.25);
-        border-radius: 10px;
-    }
-    &__whater{
-        position: absolute;
-        right: 0;
-        bottom: -220px;
-    }
-    &__lemon{
-        position: absolute;
-        top: 80px;
-        left: 150px;
-    }
-    &__leaf{
-        position: absolute;
-        left: -30px;
-        bottom: 150px;
+        justify-content: space-between;
+        padding-top: 30px;
+        img{
+            width: 24%;
+            border-radius: 6px;
+            box-shadow: 0px 8px 14px 2px rgba(39, 36, 86, 0.25);
+        }
     }
 }
 .appeal{
@@ -226,6 +208,11 @@
         max-width: 600px;
         margin-left: auto;
         margin-bottom: 30px;
+        padding: 10px;
+        border-radius: 10px;
+        background-image: url(../images/texture.jpg);
+        opacity: .9;
+        animation-duration: 2s;
     }
     &__descr-row{
         padding-left: 30px;
@@ -244,6 +231,11 @@
     &__subdescr{
         max-width: 1000px;
         margin-left: auto;
+        background: url(../images/texture.jpg);
+        opacity: .9;
+        padding: 10px;
+        border-radius: 10px;
+        animation-duration: 2s;
     }
     &__subdescr-row{
         margin-bottom: 15px;
@@ -252,6 +244,7 @@
         position: absolute;
         left: 0;
         top: 300px;
+        z-index: -1;
     }
 }
 .services{
@@ -267,28 +260,29 @@
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
     &__big-item{
+        animation-name: fadeInLeft;
+        img{
+            object-fit: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
         position: relative;
+        padding: 0 0 85% 0;
         overflow: hidden;
         border-radius: 10px;
         box-shadow: 0px 2px 16.02px 1.98px rgba(6, 6, 6, 0.11);
         grid-column: span 2;
         grid-row: span 2;
-        &::before{
-            content: "";
-            height: 100%;
-            width: 100%;
-            left: 0;
-            top: 0;
-            background: url(../images/texture.jpg);
-            opacity: 0;
-            position: absolute;
-            transition: all .3s;
-            z-index: 2;
+        &:hover .big-item__btn{
+            bottom: 0;
         }
-        &:hover.services__big-item::before{
+        &:focus.services__big-item::before{
             opacity: .7;
         }
-        &:hover .big-item__btn{
+        &:focus .big-item__btn{
             bottom: 0;
         }
         img{
@@ -307,16 +301,16 @@
         background-image: url(../images/texture.jpg);
         box-shadow: 0px 2px 16.02px 1.98px rgba(6, 6, 6, 0.11);
         position: relative;
+        animation-name: fadeInRight;
         &:nth-child(3) .small-item__inner{
             flex-direction: row-reverse;
-        }
-        &:nth-child(4) .small-item__inner{
-            flex-direction: row-reverse;
-        }
-        &:nth-child(3) .small-item__inner{
             text-align: right;
         }
+        &:nth-child(4){
+            animation-name: fadeInLeft;
+        }
         &:nth-child(4) .small-item__inner{
+            flex-direction: row-reverse;
             text-align: right;
         }
         &::before{
@@ -346,6 +340,18 @@
         }
         &:hover.services__small-item::after{
             transform: scale(1);
+        }
+        &:focus.services__small-item::before{
+            color: #fff;
+        }
+        &:focus.services__small-item::after{
+            transform: scale(1);
+        }
+        &:hover .small-item__btn{
+            bottom: 0;
+        }
+        &:active .small-item__btn{
+            bottom: 0;
         }
     }
     &__img{
@@ -410,6 +416,20 @@
         font-size: 36px;
         font-weight: 700;
         padding: 15px;
+        position: relative;
+    }
+    &__btn{
+        position: absolute;
+        font-family: 'Anjhay', sans-serif;
+        right: 50%;
+        bottom: -40px;
+        color: #fff;
+        font-size: 38px;
+        transition: all .3s;
+        background-color: $element;
+        padding: 0 10px;
+        border-radius: 6px 6px 0 0;
+        transform: translateX(50%);
     }
 }
 .contacts{
@@ -426,40 +446,6 @@
         border-radius: 10px;
         box-shadow: 0px 2px 16.02px 1.98px rgba(6, 6, 6, 0.11);
     }
-    .form{
-        width: 100%;
-        &__input{
-            width: 100%;
-            height: 60px;
-            margin-bottom: 20px;
-            border-radius: 7px;
-            border: none;
-            box-shadow: 0px 2px 16.02px 1.98px rgba(6, 6, 6, 0.11);
-            padding: 20px;
-            font-size: 24px;
-            &::placeholder{
-                color: #a8adac;
-            }
-        }
-        &__textarea{
-            height: 150px;
-        }
-        &__button{
-            border: 1px solid $element;
-            border-radius: 30px;
-            padding: 3px 15px;
-            cursor: pointer;
-            transition: all .3s;
-            text-transform: uppercase;
-            display: block;
-            margin-left: auto;
-            font-size: 20px;
-            &:hover{
-                background-color: $element;
-                color: #fff;
-            }
-        }
-    }
     &__text{
         margin-left: 30px;
     }
@@ -468,9 +454,108 @@
     }
     &__descr{
         margin-bottom: 40px;
+        animation-name: fadeIn;
+        animation-duration: 3s;
+    }
+}
+.form{
+    width: 100%;
+    &__input{
+        width: 100%;
+        height: 60px;
+        margin-bottom: 20px;
+        border-radius: 7px;
+        border: 1px solid transparent;
+        box-shadow: 0px 2px 16.02px 1.98px rgba(6, 6, 6, 0.11);
+        padding: 20px;
+        font-size: 24px;
+        &::placeholder{
+            color: #a8adac;
+        }
+        &:focus{
+            border: 1px solid $element;
+        }
+    }
+    &__textarea{
+        height: 150px;
+    }
+    &__button{
+        border: 1px solid $element;
+        border-radius: 30px;
+        padding: 3px 15px;
+        cursor: pointer;
+        transition: all .3s;
+        text-transform: uppercase;
+        display: block;
+        margin-left: auto;
+        font-size: 20px;
+        margin-bottom: 10px;
+        &:hover{
+            background-color: $element;
+            color: #fff;
+        }
+        &:focus{
+            background-color: $element;
+            color: #fff;
+        }
+    }
+    &__footnote{
+        span{
+            color: $element;
+            font-size: 18px;
+        }
     }
     .checkbox{
         margin-bottom: 30px;
+    }
+}
+.checkbox__input{
+    opacity: 0;
+    width: 0;
+    &:checked + .checkbox__label::before{
+        background-image: url(../images/checked-img.svg);
+        background-size: 80%;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+    &:focus + .checkbox__label::before{
+        border: 1px solid $element;
+    }
+}
+.checkbox__label{
+    position: relative;
+    padding-left: 20px;
+    display: block;
+    cursor: pointer;
+    &:focus{
+        background-color: #fff;
+    }
+    span{
+        color: $element;
+        font-size: 18px;
+        margin-right: 5px;
+    }
+    &::before{
+        content: "";
+        background-color: #fff;
+        width: 15px;
+        height: 15px;
+        border-radius: 2px;
+        position: absolute;
+        left: 0;
+        top: 2px;
+        border: 1px solid transparent;
+        box-shadow: 0px 2px 16.02px 1.98px rgba(6, 6, 6, 0.11);
+    }
+}
+.btn-primary{
+    border-bottom: 1px solid transparent;
+    font-style: italic;
+    &:hover{
+        border-bottom: 1px solid $element;
+    }
+    &:focus{
+        border-bottom: 1px solid $element;
     }
 }
 .footer{
@@ -479,36 +564,195 @@
     text-align: center;
     font-size: 18px;
     padding: 15px 0 0;
-    a{
-        display: block;
+    &__item{
         padding: 3px;
     }
-    &__copy{
-        margin-bottom: 5px;
+    &__offer-link{
+        border-bottom: 1px solid transparent;
+        transition: all .3s;
+        &:hover{
+            border-bottom: 1px solid #000;
+        }
+        &:focus{
+            border-bottom: 1px solid #000;
+        }
     }
-    &__mail{
+    &__mail-link{
         color: $element;
+        border-bottom: 1px solid transparent;
+        &:hover{
+            border-bottom: 1px solid $element;
+        }
+        &:focus{
+            border-bottom: 1px solid $element;
+        }
     }
     &__dev{
         background-color: $element;
+    }
+    &__dev-link{
         color: #fff;
+        border-bottom: 1px solid transparent;
+        transition: all .3s;
+        &:hover{
+            border-bottom: 1px solid #fff;
+        }
+        &:focus{
+            border-bottom: 1px solid #fff;
+        }
     }
 }
-.btn-top {
-    content: "";
+.btn-top{
     position: fixed;
     width: 31px;
     height: 38px;
     bottom: 40px;
     right: 40px;
-    background-image: url(../images/btn-top.png);
-    background-repeat: no-repeat;
-    background-position: center center;
     padding: 30px;
     cursor: pointer;
     z-index: 3;
     opacity: .3;
 }
-  
+.questionnarie__link{
+    color: $element;
+    border-bottom: 1px solid transparent;
+    font-weight: 700;
+    display: inline-block;
+    &:hover{
+        border-bottom: 1px solid $element;
+    }
+    &:active{
+        border-bottom: 1px solid $element;
+    }
+}
+.tab-item{
+    display: none;
+    &.active-tab{
+        display: block;
+    }
+}
+.tabs{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+}
+.tab{
+    font-size: 20px;
+    border-bottom: 1px solid transparent;
+    padding: 10px 10px 0;
+    cursor: pointer;
+    width: 100%;
+    text-align: center;
+    position: relative;
+    & + .tab{
+        border-left: 1px solid #000;
+    }
+    &.active{
+        color: $element;
+        border-bottom: 1px solid $element;
+    }
+}
+.form__inner{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    padding: 10px;
+}
+.form__item{
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 10px;
+    display: grid;
+    grid-auto-flow: row;
+    grid-template: 1fr auto / 1fr;
+    box-shadow: 0px 2px 8px 1.98px rgba(6, 6, 6, 0.11);
+}
+.form__item-big{
+    grid-row: span 2;
+}
+.form__item-verybig{
+    grid-row: span 3;
+}
+.form__item-verybig1{
+    grid-row: span 4;
+}
+.form__item-verybig2{
+    grid-row: span 7;
+}
+.form__label, .checkbox__question{
+    margin-bottom: 10px;
+    padding-left: 10px;
+    position: relative;
+    span{
+        color: $element;
+        font-size: 18px;
+        position: absolute;
+        left: 0;
+    }
+}
+.checkbox-questionnarie{
+    .checkbox__label{
+        &::before{
+            background-color: #edf1f0;
+            box-shadow: none;
+        }
+    }
+}
+.form-questionnarie__input{
+    border-radius: 6px;
+    background-image: url(../images/texture.jpg);
+    border: none;
+    padding: 10px;
+    border: 1px solid transparent;
+    &:focus{
+        border: 1px solid $element;
+    }
+}
+.error{
+    &__wrapper{
+        background-image: url(../images/texture.jpg);
+        border-radius: 10px;
+        padding: 20px;
+        margin-top: 30px;
+        margin-bottom: 20px;
+        width: 100%;
+        height: 60vh;
+        box-shadow: 0px 2px 16.02px 1.98px rgba(6, 6, 6, 0.11);
+        position: relative;
+        overflow: hidden;
+    }
+    &__btn{
+        position: absolute;
+        bottom: 40px;
+        margin: 0 auto;
+        right: 0;
+        left: 0;
+        max-width: 130px;
+        text-align: center;
+        width: 100%;
+    }
+    &__title{
+        font-family: 'Anjhay', sans-serif;
+        color: $element;
+        font-size: 250px;
+        line-height: 180px;
+        text-align: right;
+        margin-right: 20%;
+    }
+    &__subtitle{
+        font-family: 'Pobeda', sans-serif;
+        font-size: 77px;
+        text-align: right;
+        margin-right: 10%;
+    }
+    &__img{
+        position: absolute;
+        bottom: 120px;
+        margin: 0 auto;
+        left: 0;
+        right: 0;
+        transform: scale(1.2)
+    }
+}
 
 @import 'media';
