--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -112,6 +112,7 @@ body{
     border-radius: 10px;
     background-image: url(../images/texture.jpg);
     max-width: 1200px;
+    overflow-x: hidden;
     .contacts__form{
         box-shadow: none;
         padding: 0;
