--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -196,6 +196,7 @@
             width: 24%;
             border-radius: 6px;
             box-shadow: 0px 8px 14px 2px rgba(39, 36, 86, 0.25);
+            height: 100%;
         }
     }
 }
@@ -212,7 +213,7 @@
         border-radius: 10px;
         background-image: url(../images/texture.jpg);
         opacity: .9;
-        animation-duration: 2s;
+        animation-duration: 1.3s;
     }
     &__descr-row{
         padding-left: 30px;
@@ -235,7 +236,7 @@
         opacity: .9;
         padding: 10px;
         border-radius: 10px;
-        animation-duration: 2s;
+        animation-duration: 1.3s;
     }
     &__subdescr-row{
         margin-bottom: 15px;
@@ -306,8 +307,18 @@
             flex-direction: row-reverse;
             text-align: right;
         }
+        &:nth-child(2){
+            animation-delay: .1s;
+        }
+        &:nth-child(3){
+            animation-delay: .2s;
+        }
         &:nth-child(4){
             animation-name: fadeInLeft;
+            animation-delay: .3s;
+        }
+        &:nth-child(5){
+            animation-delay: .4s;
         }
         &:nth-child(4) .small-item__inner{
             flex-direction: row-reverse;
