--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,2 +1,15 @@
 $bg: #f4f6f6;
 $element: #25b0ab;
+
+$maxWidth: 1920;
+
+@mixin font($pcSize, $mobSize) {
+    $addSize: $pcSize - $mobSize;
+    $addMobSize: $addSize + $addSize * 0.7;
+    @media (max-width: 767px) {
+        font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
+    }
+    @media (min-width: 767px) {
+        font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth});
+    }
+}
