--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -83,7 +83,7 @@
         margin-bottom: 20px;
     }
     &__descr{
-        font-size: 24px;
+        @include font(24, 16);
         max-width: 640px;
         margin-bottom: 50px;
     }
@@ -382,13 +382,13 @@
     }
     &__title{
         font-family: "Pobeda", sans-serif;
-        font-size: 36px;
+        @include font(36, 25);
         font-weight: 700;
         margin-left: 15px;
         margin-bottom: 5px;
     }
     &__descr{
-        font-size: 18px;
+        @include font(18, 16);
         padding: 5px 15px;
         border: 2px solid $element;
         border-radius: 30px;
@@ -424,7 +424,7 @@
     }
     &__title{
         font-family: "Pobeda", sans-serif;
-        font-size: 36px;
+        @include font(36, 17);
         font-weight: 700;
         padding: 15px;
         position: relative;
@@ -479,7 +479,7 @@
         border: 1px solid transparent;
         box-shadow: 0px 2px 16.02px 1.98px rgba(6, 6, 6, 0.11);
         padding: 20px;
-        font-size: 24px;
+        @include font(24, 16);
         &::placeholder{
             color: #a8adac;
         }
@@ -752,7 +752,7 @@
     }
     &__subtitle{
         font-family: 'Pobeda', sans-serif;
-        font-size: 77px;
+        @include font(77, 38);
         text-align: right;
         margin-right: 10%;
     }
